# nvd-vault

./: .gitignore  LICENSE  README.md  README.ru.md  SECURITY.md  SECURITY.ru.md  app.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: tests.yml
examples/: Test_Stack.json  sample_inventory.json  sample_sbom_cyclonedx.json  sample_sbom_spdx.json  test_inventory.json
nvd_vault/api/: bridge.py
nvd_vault/core/: dashboard.py  enrichment.py  frontmatter.py  graph_builder.py  inventory.py  logging_config.py  markdown_writer.py  matcher.py  models.py  nvd_cache.py  nvd_client.py  remediation.py  sbom.py  search_index.py  vault_builder.py
nvd_vault/webui/: index.html
nvd_vault/webui/css/: browse.css  dashboard.css  main.css  scrollbar.css
nvd_vault/webui/js/: app.js  build-progress.js  dashboard.js  state.js  utils.js  vault-browser.js  (+1 more)
tests/: test_frontmatter.py  test_inventory.py  test_matcher.py  test_nvd_cache.py  test_nvd_client.py  test_risk_score.py  test_sbom.py  test_vault_builder.py
vault-test/: meta.json
vault-test/cves/: CVE-2020-10743.md  CVE-2026-0528.md  CVE-2026-0530.md  CVE-2026-0531.md  CVE-2026-26934.md  CVE-2026-26935.md  CVE-2026-26936.md  CVE-2026-26937.md  CVE-2026-26939.md  CVE-2026-26940.md  CVE-2026-33459.md  CVE-2026-33460.md  CVE-2026-33461.md  CVE-2026-33466.md  CVE-2026-4498.md
vault-test/cwes/: CWE-1021.md  CWE-1284.md  CWE-129.md  CWE-1333.md  CWE-20.md  CWE-22.md  CWE-250.md  CWE-358.md  CWE-400.md  CWE-770.md  CWE-862.md  CWE-863.md
vault-test/products/: kibana.md  logstash.md
